tests/cases/fail/ambiguous_overload.p4
def choose(x: float) -> float:
    return x

def choose(x: int | float) -> int | float:
    return x

def main() -> None:
    print(choose(1))
